--- a/src/pug/pages/product.pug
+++ b/src/pug/pages/product.pug
@@ -19,7 +19,7 @@ block content
       .grid
         .grid__col-md-6
           +newsblock
-        .grid__col-md-3.grid--align-content-center.grid--justify-center
+        .grid__col-md-3
           +partners
 
     
