--- a/src/components/breadcrumbs/_breadcrumbs.scss
+++ b/src/components/breadcrumbs/_breadcrumbs.scss
@@ -2,7 +2,8 @@
   font-size: 12px;
   padding-top: 40px;
   padding-bottom: 16px;
-  padding-left: 15px;
+  padding-left: 10px;
+  font-weight: 100;
   &__list {
     margin: 0;
     padding: 0;
