--- a/src/components/grid/_grid.scss
+++ b/src/components/grid/_grid.scss
@@ -5,12 +5,16 @@
         margin-right: auto;
         margin-left: auto;
         max-width: map-get($breakpoints, lg);
-        padding-left: 15px;
-        padding-right: 15px;
+        padding: $reflex-grid-spacing;
         @include max-screen(map-get($breakpoints, lg)) {
-            padding-left: 15px;
-            padding-right: 15px;
+            padding: $reflex-grid-spacing;
             max-width: 960px;
         }
+    }
+    &__col-bleed-left {
+        padding-left: 0 !important;
+    }
+    &__col-bleed-right {
+        padding-right: 0 !important;
     }
 }
