--- a/src/components/newsblock/_newsblock.scss
+++ b/src/components/newsblock/_newsblock.scss
@@ -5,8 +5,14 @@
     color: $black;
     font-size: 18px;
     font-weight: 600;
+    margin-bottom: 25px;
+    display: block;
+  }
+  &__item+&__item{
+    margin-top: 24px;
   }
   &__item-title {
+    display: block;
     color: $primary;
     font-size: 12px;
     font-weight: 500;
