--- a/src/components/partners/_partners.scss
+++ b/src/components/partners/_partners.scss
@@ -1,9 +1,13 @@
 .partners {
-  border: 1px solid $black;
-  padding: 30px 40px;
-  &__title {
-    font-size: 18px;
-    color: $black;
-    font-weight: 600;
-  }
+    border: 1px solid $black;
+    padding: 30px 40px;
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+    &__title {
+        font-size: 18px;
+        color: $black;
+        font-weight: 600;
+    }
 }
