--- a/src/components/related/related.pug
+++ b/src/components/related/related.pug
@@ -28,7 +28,7 @@ mixin related
                   +availability()
                 .related__thumb
                   img(src='img/'+currentPage+'/product__related.jpg')
-                .related__item-title
+                a(href="#").related__item-title
                   |Z-in R25 100x100 830
                 .related__price
                   |6 052,36 руб.
@@ -39,4 +39,5 @@ mixin related
         br
         |Показать ещё 6 товаров
         br
-        |Показано 6 из 100
+        span.u--txt-thin
+          |Показано 6 из 100
