--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -9,17 +9,17 @@ $breakpoints: (
 );
 
 // The font size set on the root html element.
-$base-font-size: 16px;
+$base-font-size: 12px;
 
 // The base line height determines the basic unit of vertical rhythm.
-$base-line-height: 24px;
+$base-line-height: 16px;
 
 // The length unit in which to output vertical rhythm values.
 // Supported values: px, em, rem.
-$base-unit: 'em';
+$base-unit: 'rem';
 $base-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 // The font sizes for h1-h6.
-$h1-font-size: 1.7    * $base-font-size; // 32px
+$h1-font-size: 1.7  * $base-font-size; // 32px
 $h2-font-size: 1.5  * $base-font-size; // 24
 $h3-font-size: 1.17 * $base-font-size; // 18,7
 $h4-font-size: 1    * $base-font-size; // 16
