Added styles for subscribe form

--- a/src/components/product/_product.scss
+++ b/src/components/product/_product.scss
@@ -54,6 +54,7 @@
       &__qty-cntr {
           font-weight: 100;
           color: $black;
+          vertical-align: middle;
       }
       &__qty-cntr:hover {
           color: $primary;
