--- a/src/components/product/product.pug
+++ b/src/components/product/product.pug
@@ -71,11 +71,9 @@ mixin product
             +availability()
             .product__qty
               .product__qty-title Количество
-              a(href="#")
-                i.fa.fa-minus.product__qty-cntr
+              a(href="#").fa.fa-minus.product__qty-cntr
               input.product__qty-num(type="text",value=1)
-              a(href="#")
-                i.fa.fa-plus.product__qty-cntr
+              a(href="#").fa.fa-plus.product__qty-cntr
             h3.product__price
               |8 594,80 р
             button.button.button_primary.product__button_buy(type="button")
