--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,7 @@
 @import 'footer/_footer';
 @import 'utils/_utils';
 @import 'grid/_grid';
+@import 'form/_form';
 @import 'menu/_menu';
 @import 'breadcrumbs/_breadcrumbs';
 @import 'availability/_availability';
@@ -29,4 +30,5 @@
 @import 'features/_features';
 @import 'newsblock/_newsblock';
 @import 'partners/_partners';
+@import 'subscribe/_subscribe';
 
