--- a/src/components/features/_features.scss
+++ b/src/components/features/_features.scss
@@ -4,6 +4,9 @@
     padding-bottom: 7px;
     margin-left: 10px;
     max-width: 1160px;
+    &__title {
+        font-size: 14px;
+    }
     &__item {
         text-align: center;
     }
@@ -11,6 +14,7 @@
         color: $primary;
     }
     &__description {
-      font-weight: 100;
+        font-size: 12px;
+        font-weight: 100;
     }
 }
