--- a/src/components/related/_related.scss
+++ b/src/components/related/_related.scss
@@ -4,37 +4,42 @@
     }
     &__id {
         font-weight: 100;
+        flex: 1;
     }
     &__item {
         background-color: $bg-related;
         border: 1px solid $black;
         padding: 9px;
     }
-    &__item-title{
-      display: block;
-      text-align: center;
-      color: $black;
+    &__item-title {
+        display: block;
+        text-align: center;
+        color: $black;
     }
     &__item .availability {
         margin-bottom: 0;
     }
     &__item-header {
-        padding-right: 7px;
+        display: flex;
+    }
+    &__button {
+        display: inline-block;
+        width: 30px;
     }
     &__button+&__button {
-        margin-right: 15px;
+        margin-left: 7px;
     }
     &__icon {
         position: relative;
         color: $black;
         line-height: 30px;
         text-align: center;
-    }
-    &__icon_num {
         width: 30px;
         height: 30px;
         border-radius: 50%;
         display: block;
+    }
+    &__icon_num {
         background-color: $primary;
         color: $white;
         background-position: -10px center;
@@ -44,14 +49,13 @@
         width: 30px;
         height: 30px;
         top: 0;
-        left: -7px;
+        left: 0px;
         content: '';
         display: block;
         border: 1px solid $black;
         border-radius: 50%;
     }
     &__icon_num:after {
-        left: 0;
         border-color: $primary;
     }
     &__icon_active,
@@ -90,14 +94,19 @@
         position: absolute;
         top: 50%;
         left: 0;
-        padding-left: 5px;
+    }
+    &__footer:hover &__icon {
+        color: $primary;
+    }
+    &__footer:hover &__icon:after {
+        border-color: $primary;
     }
     &__footer-icon:after {
         position: absolute;
         width: 20px;
         height: 20px;
         top: 3px;
-        left: 0;
+        left: 3px;
         content: '';
         display: block;
         border: 1px solid $black;
