Fixed several components styles

--- a/src/components/product/_product.scss
+++ b/src/components/product/_product.scss
@@ -15,12 +15,14 @@
           font-weight: 400;
           text-align: left;
       }
+      &__tbl-cell{
+          vertical-align: middle;
+      }
       &__tbl-cell:first-child {
-          vertical-align: bottom;
-          line-height: 1;
+          //vertical-align: bottom;
       }
       &__tbl-cell:last-child {
-          vertical-align: top;
+          //vertical-align: top;
           padding-left: 15px;
       }
       &__tbl-cell:first-child>span {
