--- a/src/components/features/_features.scss
+++ b/src/components/features/_features.scss
@@ -13,6 +13,10 @@
     &__item:hover>&__icon {
         color: $primary;
     }
+    &__icon {
+        font-size: 40px;
+        margin-bottom: 17px;
+    }
     &__description {
         font-size: 12px;
         font-weight: 100;
