--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -1,46 +1,35 @@
-$fa-font-path:   "../fonts";
-
-$breakpoints: (
-    'xs': 480px,
-    'sm': 768px,
-    'md': 992px,
-    'lg': 1200px,
-    'xlg': 1600px,
-);
-
+$fa-font-path : "../fonts";
+$breakpoints: ( 'xs': 480px, 'sm': 768px, 'md': 992px, 'lg': 1200px, 'xlg': 1600px, );
 // The font size set on the root html element.
 $base-font-size: 12px;
-
 // The base line height determines the basic unit of vertical rhythm.
 $base-line-height: 18px;
-
 // The length unit in which to output vertical rhythm values.
 // Supported values: px, em, rem.
 $base-unit: 'rem';
-$base-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$base-font-family: 'Helvetica Neue',
+Helvetica,
+Arial,
+sans-serif;
 // The font sizes for h1-h6.
-$h1-font-size: 2.25  * $base-font-size; // 27px
-$h2-font-size: 2  * $base-font-size; // 24
+$h1-font-size: 2.25 * $base-font-size; // 27px
+$h2-font-size: 2 * $base-font-size; // 24
 $h3-font-size: 1.5 * $base-font-size; // 18
-$h4-font-size: 1.33    * $base-font-size; // 16
+$h4-font-size: 1.33 * $base-font-size; // 16
 $h5-font-size: 1 * $base-font-size;
 $h6-font-size: 0.83 * $base-font-size;
 
 // The amount lists and blockquotes are indented.
 $indent-amount: 40px;
-
 // The following variable controls whether normalize-scss will output
 // font-sizes, line-heights and block-level top/bottom margins that form a basic
 // vertical rhythm on the page, which differs from the original Normalize.css.
 // However, changing any of the variables above will cause
 // $normalize-vertical-rhythm to be automatically set to true.
 $normalize-vertical-rhythm: false;
-
-
 // --------------------------------------------------
 // Reflex grid variables
 // --------------------------------------------------
-
 // Prefix
 // -------------------------
 // You can optionally reflex-prefix reflex classes to avoid clashing with other css frameworks
@@ -48,23 +37,19 @@ $normalize-vertical-rhythm: false;
 // Example: $reflex-prefix: reflex-;
 // By default this is an empty string
 // $reflex-prefix: null;
-
 // Grid
 // -------------------------
 $reflex-columns: 12; // number of columns
 $reflex-max-width: 1200px; // max-width of grid
-
 $reflex-xs: map-get($breakpoints, xs);
 $reflex-sm: map-get($breakpoints, sm);
 $reflex-md: map-get($breakpoints, md);
 $reflex-lg: map-get($breakpoints, lg);
 $reflex-xlg: map-get($breakpoints, xlg);
-
 // Spacing
 // -------------------------
-$reflex-grid-spacing:       0em 10px;
-$reflex-cell-spacing:       1em;
-
-$reflex-cell-spacing-sm:    ($reflex-cell-spacing / 2);
-$reflex-cell-spacing-md:    $reflex-cell-spacing;
-$reflex-cell-spacing-lg:    ($reflex-cell-spacing * 2);
+$reflex-grid-spacing : 0em 10px;
+$reflex-cell-spacing : 1em;
+$reflex-cell-spacing-sm : ($reflex-cell-spacing / 2);
+$reflex-cell-spacing-md : $reflex-cell-spacing;
+$reflex-cell-spacing-lg : ($reflex-cell-spacing * 2);
