fixed some styles

--- a/src/components/subscribe/subscribe.pug
+++ b/src/components/subscribe/subscribe.pug
@@ -4,6 +4,6 @@ mixin subscribe
   .form__input-wrapper.fa.fa-envelope-o.subscribe__input
     input(type="text", placeholder="Адрес электронной почты").form__input
   input(type="checkbox",id="chkbx",checked).form__chkbx
-  label.form__lbl(for="chkbx") Согласен на подписку 
+  label.form__lbl.subscribe__lbl(for="chkbx") Согласен на подписку 
   button.button.button_primary.subscribe__button(type="submit")
     |Подписаться
