--- a/src/components/subscribe/_subscribe.scss
+++ b/src/components/subscribe/_subscribe.scss
@@ -12,6 +12,12 @@
     display: block;
     width: 100%;
   }
+  &__input {
+    margin-bottom: 12px;
+  }
+  &__lbl {
+    margin-bottom: 24px;
+  }
   &__input:before {
     color: $primary;
   }
