--- a/src/components/features/features.pug
+++ b/src/components/features/features.pug
@@ -1,6 +1,6 @@
 mixin features
   .grid__container
-    .features.grid
+    section.features.grid
       .features__item.grid__col-md-3
         i.fa.fa-truck.features__icon
         .features__title
