--- a/src/components/newsblock/newsblock.pug
+++ b/src/components/newsblock/newsblock.pug
@@ -1,6 +1,6 @@
 mixin newsblock
   - var n=0;
-  .newsblock
+  section.newsblock
     a(href="#").newsblock__title
       |Новости &nbsp; 
       i.fa.fa-arrow-circle-o-right
