--- a/src/components/partners/partners.pug
+++ b/src/components/partners/partners.pug
@@ -1,5 +1,5 @@
 mixin partners
-  .partners
+  section.partners
     a(href="#").partners__title
       |Партнеры &nbsp; 
       i.fa.fa-arrow-circle-o-right
