--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,8 +16,6 @@
 //Base
 @import '_base';
 //Blocks
-@import 'image/_image';
-@import 'link/_link';
 @import 'button/_button';
 @import 'page/_page';
 @import 'footer/_footer';
@@ -33,3 +31,4 @@
 @import 'newsblock/_newsblock';
 @import 'partners/_partners';
 @import 'subscribe/_subscribe';
+@import 'gallery/_gallery';
