--- a/src/components/product/product.pug
+++ b/src/components/product/product.pug
@@ -22,7 +22,7 @@ mixin product
   .grid__container      
     h1.product__title A56 D200 830
   .grid__container      
-    .product
+    section.product
       .grid
         .grid__col-md-4
           .grid__cell
