--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 h1,
 h2,
 h3,
@@ -10,5 +14,21 @@ h6,
 .h4,
 .h5,
 .h6 {
-  margin-top: 0 ;
+  margin-top: 0;
+}
+
+img {
+  display: inline-block;
+  vertical-align: middle;
+  max-width: 100%;
+  height: auto;
+  -ms-interpolation-mode: bicubic;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  color: $primary;
 }
