--- a/src/components/gallery/_gallery.scss
+++ b/src/components/gallery/_gallery.scss
@@ -2,4 +2,52 @@
   &__title {
     padding-left: 10px;
   }
+  &__item {
+    border: 1px solid $black;
+    height: 100%;
+    margin-bottom: 20px;
+    transition: box-shadow 0.5s ease;
+    cursor: pointer;
+  }
+  &__item:hover {
+    border-color: $primary;
+    box-shadow: 0 0 0 2px $primary;
+  }
+  &__item:hover &__item-thumb {
+    transform: scale(1.1);
+  }
+  &__item-date {
+    font-size: 11px;
+    font-weight: 100;
+  }
+  &__item-title {
+    font-size: 14px;
+    font-weight: 500;
+    color: $black;
+  }
+  &__item-description {
+    font-size: 11px;
+    font-weight: 100;
+  }
+  &__item-footer {
+    padding: 20px;
+  }
+  &__item-thumb-wrap {
+    position: relative;
+    height: 0;
+    overflow: hidden;
+    padding-bottom: 95.25%; //Ratio 308/293
+    display: block;
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid $black;
+  }
+  &__item-thumb {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.5s ease;
+  }
 }
