--- a/src/components/gallery/gallery.pug
+++ b/src/components/gallery/gallery.pug
@@ -1,3 +1,4 @@
+include /components/pagination/pagination
 mixin gallery
   - var n=0;
   section.gallery
@@ -21,3 +22,4 @@ mixin gallery
                   else                    
                     .gallery__item-description
                       |Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+  +pagination                      
