Small improvements for build system

--- a/src/components/gallery/gallery.pug
+++ b/src/components/gallery/gallery.pug
@@ -10,7 +10,7 @@ mixin gallery
               li.gallery__item
                 -n++
                 a(href="#").gallery__item-thumb-wrap
-                  img.gallery__item-thumb(src='img/'+currentPage+'/news__item-'+n+'.jpg')
+                  img.gallery__item-thumb(src='img/news/news__item-'+n+'.jpg')
                 .gallery__item-footer
                   .gallery__item-date
                     | 8 марта 2017
