--- a/src/pug/pages/product.pug
+++ b/src/pug/pages/product.pug
@@ -8,6 +8,9 @@ include /components/newsblock/newsblock
 include /components/partners/partners
 include /components/subscribe/subscribe
 
+block pageTitle
+  title Product
+
 block content
   main.page__content
     +breadcrumbs
