--- a/src/components/product/product.pug
+++ b/src/components/product/product.pug
@@ -29,15 +29,15 @@ mixin product
           .grid__cell
             .product__image
               .product__switch
-                img.product__thumb(src='img/'+currentPage+'/product-main.jpg')
+                img.product__thumb(src='img/product/product-main.jpg')
                 .product__switch-list
-                  img.product__switch-item.product__switch-item_active(src='img/'+currentPage+'/product__type-1.jpg')
-                  img.product__switch-item(src='img/'+currentPage+'/product__type-2.jpg')
+                  img.product__switch-item.product__switch-item_active(src='img/product/product__type-1.jpg')
+                  img.product__switch-item(src='img/product/product__type-2.jpg')
               .product__strip
                 span.product__strip-itm
                   |220-240 В
                 span.product__strip-itm
-                  img(src='img/'+currentPage+'/product__strip-itm.jpg')
+                  img(src='img/product/product__strip-itm.jpg')
                 span.product__strip-itm
                   |IP 20
                 span.product__strip-itm
@@ -89,13 +89,13 @@ mixin product
           .grid__col-md-8
             .product__gallery
               .product__gallery-itm
-                img(src='img/'+currentPage+'/product__gallery-1.jpg')
+                img(src='img/product/product__gallery-1.jpg')
               .product__gallery-itm
-                img(src='img/'+currentPage+'/product__gallery-2.jpg')
+                img(src='img/product/product__gallery-2.jpg')
               .product__gallery-itm
-                img(src='img/'+currentPage+'/product__gallery-3.jpg')
+                img(src='img/product/product__gallery-3.jpg')
               .product__gallery-itm
-                img(src='img/'+currentPage+'/product__gallery-4.jpg')
+                img(src='img/product/product__gallery-4.jpg')
           .grid__col-md-4
             .product__description-title
               |О серии
