--- a/src/pug/head.pug
+++ b/src/pug/head.pug
@@ -5,11 +5,11 @@ html(lang="en")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     // The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags 
-    title= currentPage
+    block pageTitle   
 
     //Bundle css
     link(rel='stylesheet', href="css/bundle.css")
-    base(href='/')
+    base(href='/'+baseHref)
     // HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
     // WARNING: Respond.js doesn't work if you view the page via file://
     <!--[if lt IE 9]>
