--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -1,4 +1,4 @@
-$fa-font-path : "../fonts";
+$fa-font-path: "../fonts";
 $breakpoints: ( 'xs': 480px, 'sm': 768px, 'md': 992px, 'lg': 1200px, 'xlg': 1600px, );
 // The font size set on the root html element.
 $base-font-size: 12px;
@@ -7,18 +7,13 @@ $base-line-height: 18px;
 // The length unit in which to output vertical rhythm values.
 // Supported values: px, em, rem.
 $base-unit: 'rem';
-$base-font-family: 'Helvetica Neue',
-Helvetica,
-Arial,
-sans-serif;
-// The font sizes for h1-h6.
+$base-font-family: Roboto, Helvetica, Arial, sans-serif; // The font sizes for h1-h6.
 $h1-font-size: 2.25 * $base-font-size; // 27px
 $h2-font-size: 2 * $base-font-size; // 24
 $h3-font-size: 1.5 * $base-font-size; // 18
 $h4-font-size: 1.33 * $base-font-size; // 16
 $h5-font-size: 1 * $base-font-size;
 $h6-font-size: 0.83 * $base-font-size;
-
 // The amount lists and blockquotes are indented.
 $indent-amount: 40px;
 // The following variable controls whether normalize-scss will output
@@ -48,8 +43,8 @@ $reflex-lg: map-get($breakpoints, lg);
 $reflex-xlg: map-get($breakpoints, xlg);
 // Spacing
 // -------------------------
-$reflex-grid-spacing : 0em 10px;
-$reflex-cell-spacing : 1em;
-$reflex-cell-spacing-sm : ($reflex-cell-spacing / 2);
-$reflex-cell-spacing-md : $reflex-cell-spacing;
-$reflex-cell-spacing-lg : ($reflex-cell-spacing * 2);
+$reflex-grid-spacing: 0em 10px;
+$reflex-cell-spacing: 1em;
+$reflex-cell-spacing-sm: ($reflex-cell-spacing / 2);
+$reflex-cell-spacing-md: $reflex-cell-spacing;
+$reflex-cell-spacing-lg: ($reflex-cell-spacing * 2);
