--- a/src/components/product/product.pug
+++ b/src/components/product/product.pug
@@ -79,7 +79,7 @@ mixin product
               a(href="#").fa.fa-plus.product__qty-cntr
             h3.product__price
               |8 594,80 р
-            button.button.button_primary.product__button_buy(type="button")
+            button.button.button_primary.product__button_buy.grid__col-md-7.grid--align-center(type="button")
                 |Купить 
             a(href="#").link.product__link.product__link_text
               |Перейти в корзину
