--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,7 @@
 //Base
 @import '_base';
 //Blocks
+@import 'icon/_icon';
 @import 'button/_button';
 @import 'page/_page';
 @import 'footer/_footer';
@@ -33,3 +34,4 @@
 @import 'subscribe/_subscribe';
 @import 'gallery/_gallery';
 @import 'pagination/_pagination';
+@import 'basket/_basket';
