Added/ updated icons

--- a/src/components/features/features.pug
+++ b/src/components/features/features.pug
@@ -2,7 +2,7 @@ mixin features
   .grid__container
     section.features.grid
       .features__item.grid__col-md-3
-        i.fa.fa-truck.features__icon
+        i.icon-car.icon-car-dims.u--centered.features__icon
         .features__title
           |Удобная доставка
         .features__description
@@ -10,13 +10,13 @@ mixin features
           br
           |СПб
       .features__item.grid__col-md-3
-        i.fa.fa-map-marker.features__icon
+        i.icon-map-marker.icon-map-marker-dims.u--centered.features__icon
         .features__title
           |Пункт самовывоза
         .features__description
           |Можно забрать со склада
       .features__item.grid__col-md-3
-        i.fa.fa-credit-card.features__icon
+        i.icon-card.icon-card-dims.u--centered.features__icon
         .features__title
           |Оплата удобным способом
         .features__description
@@ -26,7 +26,7 @@ mixin features
           br 
           |безналичному расчету
       .features__item.grid__col-md-3
-        i.fa.fa-cog.features__icon
+        i.icon-cog.icon-cog-dims.u--centered.features__icon
         .features__title
           |Гарантийное обслуживание
         .features__description
