--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,8 @@
 @import 'reflex-grid/scss/reflex';
 //Base
 @import '_base';
+//Icons
+@import 'iconizr-svg-data';
 //Blocks
 @import 'icon/_icon';
 @import 'button/_button';
