--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -12,9 +12,11 @@ mixin footer
           a(href="mailto:info@zenit-stp.ru").footer__item.fa.fa-envelope.footer__icon
             |info@zenit-stp.ru
         .grid__col-md-6.grid--justify-end.grid--align-content-start.grid--direction-row
-          a(href="#").fa.fa-facebook.footer__icon.footer__icon_circle
-          a(href="#").fa.fa-vk.footer__icon.footer__icon_circle
-          a(href="#").fa.fa-linkedin.footer__icon.footer__icon_circle
+          a(href="#").icon-fb.icon-fb-dims.footer__icon.footer__icon_share
+          a(href="#").icon-vk.icon-vk-dims.footer__icon.footer__icon_share
+          a(href="#").icon-linkedin.icon-linkedin-dims.footer__icon.footer__icon_share
+          a(href="#").icon-houzz.icon-houzz-dims.footer__icon.footer__icon_share
+          a(href="#").icon-inmyroom.icon-inmyroom-dims.footer__icon.footer__icon_share
 
           
         
