Updated menu icons

--- a/src/components/menu/menu.pug
+++ b/src/components/menu/menu.pug
@@ -27,6 +27,6 @@ mixin menu
                   li.menu__item.menu__item_submenu
                     a.menu__link.menu__link_submenu(class=subitem.active ? 'menu__link_active' : '',href=subitem.url)=subitem.title
     .grid__col-md-1.grid__col-sm-1.grid--justify-center
-      a.fa.fa-shopping-cart.menu__icon_cart(href='#')
+      a.icon-basket_light.icon-basket_light-dims.menu__icon_cart(href='#')
     .grid__col-md-1.grid__col-sm-1.grid--justify-center
-      a.fa.fa-search.menu__icon_search(href='#')
+      a.icon-search.icon-search-dims.menu__icon_search(href='#')
