Updated newsblock & partners icons

--- a/src/components/newsblock/newsblock.pug
+++ b/src/components/newsblock/newsblock.pug
@@ -3,7 +3,7 @@ mixin newsblock
   section.newsblock
     a(href="#").newsblock__title
       |Новости &nbsp; 
-      i.fa.fa-arrow-circle-o-right
+      i.icon-arrow-right_circle.icon-arrow-right_circle-dims.u--inline-middle
     while n < 2
       .newsblock__item
         -n++
