--- a/src/components/partners/partners.pug
+++ b/src/components/partners/partners.pug
@@ -2,5 +2,5 @@ mixin partners
   section.partners
     a(href="#").partners__title
       |Партнеры &nbsp; 
-      i.fa.fa-arrow-circle-o-right
+      i.icon-arrow-right_circle.icon-arrow-right_circle-dims.u--inline-middle
     
