Updated related icons

--- a/src/components/product/product.pug
+++ b/src/components/product/product.pug
@@ -9,9 +9,9 @@ mixin product
       {'param':'Тцв (К)', 'value': '3000'}, 
       {'param':'cos φ', 'value': '0,88'},
       {'param':'артикул ', 'value': 'ze11003041'},
-      {'param':'*ies','icon':'fa fa-download' },
-      {'param':'паспорт', 'icon':'fa fa-download', 'active':true },
-      {'param':'монтажная инструкция ','icon':'fa fa-download'}]
+      {'param':'*ies','icon':'icon-download icon-download-dims u--inline-middle' },
+      {'param':'паспорт', 'icon':'icon-download icon-download-dims u--inline-middle', 'active':true },
+      {'param':'монтажная инструкция ','icon':'icon-download icon-download-dims u--inline-middle'}]
     var productEquipment=[
       {'param':'гипсовый корпус','value':'1 шт.'},
       {'param':'световой модуль','value':'1 шт.'},
