--- a/src/components/related/_related.scss
+++ b/src/components/related/_related.scss
@@ -1,6 +1,6 @@
 .related {
     &__title {
-        padding-left: 10px;
+        padding-left: $reflex-cell-spacing;
     }
     &__id {
         font-weight: 100;
