--- a/src/components/basket/_basket.scss
+++ b/src/components/basket/_basket.scss
@@ -1,6 +1,6 @@
 .basket {
   &__title {
-    padding-left: 10px;
+    padding-left: $reflex-cell-spacing;
   }
   &__tbl {
     border-collapse: collapse;
