--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   border-top: 3px solid $black;
-  padding-top: 12px;
+  padding-top: 1rem;
   &__item:first-child {
     text-indent: -30px;
     margin-left: 30px;
