--- a/src/components/grid/_grid.scss
+++ b/src/components/grid/_grid.scss
@@ -5,9 +5,9 @@
         margin-right: auto;
         margin-left: auto;
         max-width: map-get($breakpoints, lg);
-        padding: $reflex-grid-spacing;
+        padding: $reflex-cell-spacing;
         @include max-screen(map-get($breakpoints, lg)) {
-            padding: $reflex-grid-spacing;
+            padding: $reflex-cell-spacing;
             max-width: 960px;
         }
     }
