--- a/src/components/subscribe/_subscribe.scss
+++ b/src/components/subscribe/_subscribe.scss
@@ -13,10 +13,10 @@
     width: 100%;
   }
   &__input {
-    margin-bottom: 12px;
+    margin-bottom: 1rem;
   }
   &__lbl {
-    margin-bottom: 24px;
+    margin-bottom: 2rem;
   }
   &__input:before {
     color: $primary;
