--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -43,8 +43,8 @@ $reflex-lg: map-get($breakpoints, lg);
 $reflex-xlg: map-get($breakpoints, xlg);
 // Spacing
 // -------------------------
-$reflex-grid-spacing: 0em 10px;
-$reflex-cell-spacing: 1em;
+$reflex-cell-spacing: 10px;
+$reflex-grid-spacing: 0em $reflex-cell-spacing;
 $reflex-cell-spacing-sm: ($reflex-cell-spacing / 2);
 $reflex-cell-spacing-md: $reflex-cell-spacing;
 $reflex-cell-spacing-lg: ($reflex-cell-spacing * 2);
