--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -48,3 +48,33 @@ $reflex-grid-spacing: 0em $reflex-cell-spacing;
 $reflex-cell-spacing-sm: ($reflex-cell-spacing / 2);
 $reflex-cell-spacing-md: $reflex-cell-spacing;
 $reflex-cell-spacing-lg: ($reflex-cell-spacing * 2);
+
+//Range styler
+// The draghandle
+$thumb-color: $black; 
+
+$thumb-radius: 0% ;
+$thumb-height: 25px;
+$thumb-width: 3px;
+
+$thumb-border-width: 0;
+$thumb-border-color: $black;
+
+$thumb-shadow-size: 0;
+$thumb-shadow-blur: 1px;
+$thumb-shadow-color: $black;
+
+// The range
+$track-color: $primary;
+
+$track-radius: 0px;
+$track-width: auto;
+$track-height: 9px;
+
+$track-border-width: 0px;
+$track-border-color: $black;
+
+$track-shadow-size: 0px;
+$track-shadow-blur: 0px;
+$track-shadow-color: rgba(0,0,0,.0);
+
