--- a/src/components/form/_form.scss
+++ b/src/components/form/_form.scss
@@ -80,14 +80,17 @@
   &__chkbx {
     display: none;
   }
-  &__select {
+  &__select,
+  &__select:hover {
     margin-bottom: 1rem;
     font-size: 11px;
     font-weight: 100;
     border: 1px solid $black;
     border-radius: 3px;
-    padding: 1rem 2rem;
-    background-position: 95% center;
+    padding: 1rem 3.1rem 1rem 2rem;
+    background-position: right 2rem center;
+    vertical-align: baseline;
+    cursor: pointer;
   }
 }
 
