--- a/src/components/search/_search.scss
+++ b/src/components/search/_search.scss
@@ -32,7 +32,9 @@
   &__item-description {
     margin-bottom: 1.5rem;
   }
-  &__select {
+  &__select,
+  &__select:hover {
     margin-bottom: 2rem;
+    margin-left: 1.5rem;
   }
 }
