--- a/src/pug/pages/basket.pug
+++ b/src/pug/pages/basket.pug
@@ -4,7 +4,7 @@ include /components/breadcrumbs/breadcrumbs
 include /components/basket/basket
 
 block pageTitle
-  title Basket
+  title Корзина
 
 block content
   main.page__content
