--- a/src/pug/pages/news.pug
+++ b/src/pug/pages/news.pug
@@ -9,7 +9,7 @@ include /components/partners/partners
 include /components/subscribe/subscribe
 
 block pageTitle
-  title News
+  title Новости
 
 block content
   main.page__content
