--- a/src/pug/pages/product.pug
+++ b/src/pug/pages/product.pug
@@ -9,7 +9,7 @@ include /components/partners/partners
 include /components/subscribe/subscribe
 
 block pageTitle
-  title Product
+  title Продукт
 
 block content
   main.page__content
