--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,16 +9,16 @@
 @include normalize();
 //MQ mixin
 @import 'sass-mediaqueries/media-queries';
-//Import grid system
-@import 'font-awesome/scss/font-awesome';
 //Import font-awesome
+@import 'font-awesome/scss/font-awesome';
+//Import grid system
 @import 'reflex-grid/scss/reflex';
-//Base
-@import '_base';
 //Icons
 @import 'iconizr-svg-data';
 //Range styles mixin
 @import 'range-slider-sass/range';
+//Base
+@import '_base';
 //Blocks
 @import 'icon/_icon';
 @import 'button/_button';
@@ -40,3 +40,5 @@
 @import 'pagination/_pagination';
 @import 'basket/_basket';
 @import 'search/_search';
+@import 'catalog/_catalog';
+@import 'tabs/_tabs';
