Fixed grid-container paddings

--- a/src/components/catalog/catalog.pug
+++ b/src/components/catalog/catalog.pug
@@ -3,7 +3,7 @@ mixin catalog
   section.catalog
     .grid__container      
       h1.catalog__title Каталог
-      <!-- Потому что эти олухи не сделали нормальной сетки сука -->
+      <!-- Потому что эти олухи не сделали нормальной сетки -->
       .catalog__grid
         .catalog__col
           .catalog__subtitle.catalog__list-title
