--- a/src/components/search/search.pug
+++ b/src/components/search/search.pug
@@ -64,3 +64,8 @@ mixin search
               |&nbsp; руб
             .search__filter-item
               input(type="range",min="1",max="100",step="1")
+            .grid.grid--justify-end
+              .grid__col-md-7.grid__col--bleed
+                button(type="button").button.button_primary.button_hollow.search__button.grid--align-center
+                  |Подобрать
+            
