Fixed bottom margin

--- a/src/components/search/_search.scss
+++ b/src/components/search/_search.scss
@@ -1,6 +1,7 @@
 .search {
   &__title {
     padding-left: $reflex-cell-spacing;
+    margin-bottom: 40px;
   }
   &__thumb {
     border: 1px solid $black;
